SFDC DevOps Test/src/objects/Test_Scenario__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a test situation that verifies the fulfillment of a request.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on test scenario</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of test scenario</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Functional area of test scenario</description>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related release of test scenario</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Test Scenarios</relationshipLabel>
        <relationshipName>Test_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It allows users to create Test Scenarios directly at request level to make testing flow more logical and create better traceability</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Test Scenarios</relationshipLabel>
        <relationshipName>Test_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of test scenario</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Release: Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Clarification Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarification Provided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Test_Scripts__c</fullName>
        <description>Number of test scripts for the test scenario</description>
        <label># of Test Scripts</label>
        <summaryForeignKey>Test_Script__c.Test_Scenario__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Test Scenario</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TestScenario-{00000000}</displayFormat>
        <label>Test Scenario ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>